added tests & ci

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,5 +40,18 @@ gt = "geoparquet_tools:cli"
 "Homepage" = "https://github.com/cholmes/geoparquet-tools"
 "Bug Tracker" = "https://github.com/cholmes/geoparquet-tools/issues"
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+]
+
 [tool.hatch.build.targets.wheel]
-packages = ["geoparquet_tools"] 
+packages = ["geoparquet_tools"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+addopts = "-v --tb=short" 
