--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
     "pyarrow>=12.0.0",
     "duckdb>=1.1.3",
     "pandas>=1.0.0",
-    "fsspec>=2023.9.0"
+    "fsspec>=2023.9.0",
+    "rich>=13.0.0"
 ]
 
 [project.scripts]
