--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "duckdb>=1.1.3",
     "pandas>=1.0.0",
     "fsspec>=2023.9.0",
-    "rich>=13.0.0"
+    "rich>=13.0.0",
+    "pre-commit>=4.3.0",
 ]
 
 [project.scripts]
@@ -52,6 +53,11 @@ dev = [
     "ruff>=0.8.0",
     "pre-commit>=3.0.0",
     "mypy>=1.0.0",
+]
+docs = [
+    "mkdocs>=1.5.0",
+    "mkdocs-material>=9.5.0",
+    "mkdocstrings[python]>=0.24.0",
 ]
 
 [tool.hatch.build.targets.wheel]
