docs: consolidate duplicates with snippets system
  Eliminate ~500 lines of duplicate content across documentation.

  Changes:
  - Create docs/_includes/ with 5 reusable snippets (compression, H3, CLI options, API examples, admin datasets)
  - Replace duplicates with --8<-- snippet references in 7 files
  - Symlink docs/contributing.md and docs/CHANGELOG.md to root versions
  - Streamline README from 168→62 lines (63% reduction)
  - Add pymdownx.snippets to mkdocs.yml

  Single source of truth for all repeated content.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,9 @@ markdown_extensions:
   - admonition
   - pymdownx.superfences
   - pymdownx.highlight
+  - pymdownx.snippets:
+      base_path: docs
+      check_paths: true
   - tables
   - toc:
       permalink: true
@@ -65,4 +68,4 @@ nav:
     - Basic Usage: examples/basic.md
     - Batch Processing: examples/batch.md
   - Contributing: contributing.md
-  - Changelog: changelog.md
+  - Changelog: CHANGELOG.md
