feat(stac): add STAC Item and Collection generation
Add  command to generate STAC metadata from GeoParquet files:
- Single file → STAC Item JSON
- Partitioned directory → STAC Collection + Items
- Automatic PMTiles overview detection
- Public URL mapping for S3→HTTPS conversion
- Projection info (CRS, geometry types) from GeoParquet metadata

Add  command for STAC validation:
- STAC spec compliance via pystac.validation
- Required fields checking
- Asset href resolution (local files)
- Best practices validation

Includes comprehensive tests (29 tests) and full documentation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
     - Adding Spatial Indices: guide/add.md
     - Partitioning Files: guide/partition.md
     - Formatting Files: guide/format.md
+    - STAC Generation: guide/stac.md
   - CLI Reference:
     - Overview: cli/overview.md
     - inspect: cli/inspect.md
@@ -58,6 +59,7 @@ nav:
     - add: cli/add.md
     - partition: cli/partition.md
     - format: cli/format.md
+    - stac: cli/stac.md
   - Python API:
     - Overview: api/overview.md
     - Core Functions: api/core.md
