--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ dependencies = [
     "jsonschema>=4.0.0", # Required for pystac validation
     "psutil>=5.9.0",
     "obstore>=0.8.2",
+    "requests>=2.28.0",  # For HTTP support in fsspec (remote files)
+    "aiohttp>=3.8.0",  # For async HTTP support in fsspec (remote files)
+    "s3fs>=2023.9.0",  # For S3 support in fsspec (remote files)
 ]
 
 [project.scripts]
