--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,9 @@ dependencies = [
     "radon>=6.0.1",
     "xenon>=0.9.3",
     "pystac>=1.9.0",
-    "jsonschema>=4.0.0",  # Required for pystac validation
+    "jsonschema>=4.0.0", # Required for pystac validation
     "psutil>=5.9.0",
+    "obstore>=0.8.2",
 ]
 
 [project.scripts]
