--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 ]
 dependencies = [
     "click>=8.0.0",
-    "pyarrow>=12.0.0",
+    "pyarrow==18.0.0",
     "duckdb>=1.1.3",
     "pandas>=1.0.0",
     "fsspec>=2023.9.0",
