--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 ]
 dependencies = [
     "click>=8.0.0",
-    "pyarrow==18.0.0",
+    "pyarrow>=12.0.0,<22.0.0",  # v22+ has ABI incompatibility with abseil on some systems
     "duckdb>=1.1.3",
     "pandas>=1.0.0",
     "fsspec>=2023.9.0",
@@ -41,9 +41,8 @@ dependencies = [
     "jsonschema>=4.0.0", # Required for pystac validation
     "psutil>=5.9.0",
     "obstore>=0.8.2",
-    "requests>=2.28.0",  # For HTTP support in fsspec (remote files)
-    "aiohttp>=3.8.0",  # For async HTTP support in fsspec (remote files)
-    "s3fs>=2023.9.0",  # For S3 support in fsspec (remote files)
+    "aiohttp>=3.8.0",  # Required by fsspec for HTTP/HTTPS support (requests comes via xenon)
+    "s3fs>=2023.9.0"  # Required by fsspec for S3 support
 ]
 
 [project.scripts]
