feat(io): add remote-to-remote support with consolidated write infrastructure
Add  manager and  helper to eliminate duplicate temp file/upload logic (~90 lines). Refactor  and  to use new helpers. All write operations now support S3/GCS/Azure/HTTPS input and output.

consolidate remote io handling

feat(auth): add automatic AWS credential discovery for S3

Load DuckDB aws extension with credential_chain provider for authenticated
S3 reads. Replaces manual credential extraction with standard AWS SDK
mechanisms (env vars → profiles → IAM roles).

Removes 48 lines of subprocess-based AWS CLI calls. Updates --profile flag
to set AWS_PROFILE env var. Adds S3 authentication docs.

Azure/GCS private reads remain unimplemented. All writes work via obstore.

feat(io): add remote-to-remote operations and automatic AWS auth

Enables cloud-to-cloud operations (read from S3, write to GCS, etc).
Commands like sort, partition, check, and add now accept and output
remote URLs directly without local downloads.

DuckDB aws extension with credential_chain handles private S3 reads.
Credentials discovered via env vars → AWS profiles → IAM roles.

Azure/GCS private reads unsupported. Writes work for all providers.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,7 @@ nav:
     - Sorting Data: guide/sort.md
     - Adding Spatial Indices: guide/add.md
     - Partitioning Files: guide/partition.md
+    - Remote Files & Authentication: guide/remote-files.md
     - Uploading to Cloud Storage: guide/upload.md
     - STAC Generation: guide/stac.md
   - CLI Reference:
