--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+        args: ['--maxkb=1000']
       - id: check-merge-conflict
       - id: check-toml
       - id: mixed-line-ending
@@ -26,8 +27,8 @@ repos:
       - id: vulture
 
     # monitor code complexity
-  - repo: https://github.com/rubik/xenon
-    rev: v0.9.0
-    hooks:
-    - id: xenon
-      args: ['--max-absolute=B', '--max-modules=B', '--max-average=A']
+  # - repo: https://github.com/rubik/xenon
+  #   rev: v0.9.0
+  #   hooks:
+  #   - id: xenon
+  #     args: ['--max-absolute=B', '--max-modules=B', '--max-average=A']
