--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,4 +30,4 @@ repos:
     rev: v0.9.0
     hooks:
     - id: xenon
-      args: ['--max-absolute=B', '--max-modules=B', '--max-average=A']
+      args: ['--max-absolute=C', '--max-modules=C', '--max-average=B']
