--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ dependencies = [
     "psutil>=5.9.0",
     "obstore>=0.8.2",
     "aiohttp>=3.8.0",  # Required by fsspec for HTTP/HTTPS support
-    "s3fs>=2023.9.0"  # Required by fsspec for S3 support
+    "s3fs>=2023.9.0",  # Required by fsspec for S3 support
+    "geoarrow-pyarrow>=0.1.0",  # Required for CRS handling in Parquet native geo types
 ]
 
 [project.scripts]
