--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "aiohttp>=3.8.0",  # Required by fsspec for HTTP/HTTPS support
     "s3fs>=2023.9.0",  # Required by fsspec for S3 support
     "geoarrow-pyarrow>=0.1.0",  # Required for CRS handling in Parquet native geo types
+    "pyproj>=3.0.0",  # Required for CRS handling and PROJJSON generation
 ]
 
 [project.scripts]
