--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,6 +4,8 @@ on:
     branches: [ main, refactor ]
   pull_request:
     branches: [ main ]
+  schedule:
+    - cron: '15 2 * * *'  # Run slow tests nightly at 2:15 AM UTC
 
 jobs:
   lint:
@@ -13,6 +15,8 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
 
       - name: Set up Python
         run: uv python install 3.11
@@ -51,6 +55,8 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
 
       - name: Set up Python ${{ matrix.python-version }}
         run: uv python install ${{ matrix.python-version }}
@@ -58,9 +64,15 @@ jobs:
       - name: Install dependencies
         run: uv sync --all-extras
 
-      - name: Run tests with pytest
+      - name: Run fast tests with pytest (parallel)
+        shell: bash
         run: |
-          uv run pytest -v --tb=short --cov=geoparquet_io --cov-report=term-missing --cov-report=xml
+          if [ "$RUNNER_OS" == "Windows" ]; then
+            # Use loadfile distribution on Windows to reduce DuckDB extension conflicts
+            uv run pytest -n auto --dist=loadfile -m "not slow and not network" -v --tb=short --cov=geoparquet_io --cov-report=term-missing --cov-report=xml
+          else
+            uv run pytest -n auto -m "not slow and not network" -v --tb=short --cov=geoparquet_io --cov-report=term-missing --cov-report=xml
+          fi
 
       - name: Upload coverage to Codecov
         if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
@@ -78,6 +90,8 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
 
       - name: Set up Python
         run: uv python install 3.11
@@ -88,3 +102,38 @@ jobs:
       - name: Test example notebooks
         run: |
           uv run pytest --nbmake examples/*.ipynb -v --nbmake-timeout=120 --no-cov
+
+  slow-tests:
+    runs-on: ${{ matrix.os }}
+    # Only run on schedule (nightly) or when explicitly requested
+    if: github.event_name == 'schedule' || contains(github.event.head_commit.message, '[test-slow]') || (github.event_name == 'pull_request' && contains(github.event.pull_request.body, '[test-slow]'))
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        python-version: ['3.11']  # Only test on primary version
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+
+      - name: Set up Python ${{ matrix.python-version }}
+        run: uv python install ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: uv sync --all-extras
+
+      - name: Run slow and network tests (parallel)
+        run: |
+          uv run pytest -n auto -m "slow or network" -v --tb=short --cov=geoparquet_io --cov-report=xml
+
+      - name: Upload slow test coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          file: ./coverage.xml
+          flags: slowtests
+          name: codecov-slow
+          fail_ci_if_error: false
