--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -64,6 +64,10 @@ jobs:
       - name: Install dependencies
         run: uv sync --all-extras
 
+      - name: Pre-install DuckDB extensions
+        run: |
+          uv run python -c "import duckdb; con = duckdb.connect(); con.execute('INSTALL spatial'); con.execute('INSTALL httpfs'); con.execute('INSTALL h3 FROM community')"
+
       - name: Run fast tests with pytest (parallel)
         shell: bash
         run: |
@@ -125,6 +129,10 @@ jobs:
 
       - name: Install dependencies
         run: uv sync --all-extras
+
+      - name: Pre-install DuckDB extensions
+        run: |
+          uv run python -c "import duckdb; con = duckdb.connect(); con.execute('INSTALL spatial'); con.execute('INSTALL httpfs'); con.execute('INSTALL h3 FROM community')"
 
       - name: Run slow and network tests (parallel)
         run: |
