Fix slow test coverage failure by setting fail-under to 0 [test-slow]
Slow tests exercise only a subset of operations (conversions, streaming,
reprojection), achieving ~29% coverage vs the project's 67% threshold.
This caused nightly slow test jobs to fail despite all tests passing.

Set --cov-fail-under=0 for slow tests to allow them to run without
failing on coverage threshold, while still collecting and uploading
coverage data to Codecov for tracking overall project coverage.

Fast tests continue to enforce the 67% threshold as expected.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -136,7 +136,7 @@ jobs:
 
       - name: Run slow and network tests (parallel)
         run: |
-          uv run pytest -n auto -m "slow or network" -v --tb=short --cov=geoparquet_io --cov-report=xml
+          uv run pytest -n auto -m "slow or network" -v --tb=short --cov=geoparquet_io --cov-report=xml --cov-report=term-missing --cov-fail-under=0
 
       - name: Upload slow test coverage to Codecov
         uses: codecov/codecov-action@v5
