--- a/.github/workflows/release-benchmark.yml
+++ b/.github/workflows/release-benchmark.yml
@@ -41,15 +41,31 @@ jobs:
         run: |
           if [[ "${{ github.event_name }}" == "release" ]]; then
             CURRENT="${{ github.event.release.tag_name }}"
-            # Get the previous tag
-            BASELINE=$(git tag --sort=-version:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | head -2 | tail -1)
+            # Get the previous tag (skip current tag, get next one)
+            TAGS=$(git tag --sort=-version:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$')
+            TAG_COUNT=$(echo "$TAGS" | wc -l)
+            if [[ $TAG_COUNT -lt 2 ]]; then
+              echo "Only one release tag exists, skipping comparison"
+              BASELINE=""
+            else
+              BASELINE=$(echo "$TAGS" | head -2 | tail -1)
+            fi
           else
             CURRENT="${{ inputs.current_version }}"
             BASELINE="${{ inputs.baseline_version }}"
           fi
           echo "current=$CURRENT" >> $GITHUB_OUTPUT
           echo "baseline=$BASELINE" >> $GITHUB_OUTPUT
-          echo "Comparing $CURRENT against $BASELINE"
+          if [[ -n "$BASELINE" ]]; then
+            echo "Comparing $CURRENT against $BASELINE"
+          else
+            echo "No baseline version for comparison"
+          fi
+
+      - name: Install system dependencies (GDAL for import operations)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends libgdal-dev gdal-bin
 
       - name: Install current version
         run: |
@@ -96,15 +112,15 @@ jobs:
           uv run python scripts/version_benchmark.py \
             --compare results_baseline.json results_current.json > comparison.txt
 
-          # Check for regressions (>25% slower)
-          REGRESSIONS=$(uv run python -c "
+          # Check for regressions (>25% slower) - write to file for multiline handling
+          uv run python -c "
           import json
           with open('results_baseline.json') as f:
               baseline = json.load(f)
           with open('results_current.json') as f:
               current = json.load(f)
 
-          baseline_lookup = {(b['file_size'], b['operation']): b['avg_time'] for b in baseline['benchmarks'] if b['avg_time']}
+          baseline_lookup = {(b['file_size'], b['operation']): b['avg_time'] for b in baseline['benchmarks'] if b['avg_time'] and b['avg_time'] > 0}
           regressions = []
           for b in current['benchmarks']:
               key = (b['file_size'], b['operation'])
@@ -112,10 +128,17 @@ jobs:
                   delta = (b['avg_time'] - baseline_lookup[key]) / baseline_lookup[key]
                   if delta > 0.25:
                       regressions.append(f\"{b['operation']} ({b['file_size']}): +{delta*100:.0f}%\")
-          print('\\n'.join(regressions) if regressions else 'none')
-          ")
+          with open('regressions.txt', 'w') as f:
+              f.write('\n'.join(regressions) if regressions else 'none')
+          "
 
-          echo "regressions=$REGRESSIONS" >> $GITHUB_OUTPUT
+          REGRESSIONS=$(cat regressions.txt)
+          # Use heredoc for multiline output
+          {
+            echo "regressions<<EOF"
+            cat regressions.txt
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
 
           # Create summary
           echo "## Release Benchmark Comparison" >> $GITHUB_STEP_SUMMARY
