Run slow tests on every PR with reduced matrix and fix geometry detection bug
This PR combines two improvements:

## 1. CI Enhancement: Run Slow Tests on Every PR

**Changes:**
- Remove conditional that limited slow tests to nightly/explicit runs only
- Slow tests now run in parallel with fast tests on every push/PR
- Reduce slow-tests matrix from 10 jobs to 3 jobs (3 OS × Python 3.11 only)
- Add Windows-specific pytest distribution mode (--dist=loadfile)
- Add conditional Codecov upload (only ubuntu-latest + Python 3.11)

**Benefits:**
- Faster feedback: catch regressions immediately vs 24h delay
- Platform coverage: still test all 3 OS (ubuntu, macos, windows)
- Efficient: parallel execution means ~15min total wall time
- Cost savings: 32% fewer CI jobs (15 vs 22), ~90 fewer CI minutes per PR
- Merged coverage: Codecov automatically combines fast + slow test reports

**Rationale:**
Slow tests primarily test business logic, not platform-specific edge cases.
Full Python version coverage (3.10-3.13) is already handled by fast tests.
Running slow tests on all Python versions provided minimal additional value.

## 2. Bug Fix: Handle Queries Without Geometry Column

**Problem:**
Write strategy refactor (PR #185) added automatic bbox/geometry_types computation
but assumed geometry column from input would always be in output query. This broke
queries that deliberately exclude geometry (e.g., SELECT id, name FROM table).

**Solution:**
Add safety checks to compute_bbox_via_sql and compute_geometry_types_via_sql:
- Check if geometry column exists in query result schema before computing
- Return None (bbox) or empty list (geometry_types) if column missing
- Prevents DuckDB binder errors on non-spatial queries

**Fixes:** test_streaming.py::TestStreamIO::test_execute_transform_file_to_file

## New CI Job Count

- Fast tests: 10 jobs (3 OS × 4 Python versions with exclusions)
- Slow tests: 3 jobs (3 OS × Python 3.11 only) ← Reduced from 10
- Other: 2 jobs (lint, notebooks)
- *

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -109,13 +109,11 @@ jobs:
 
   slow-tests:
     runs-on: ${{ matrix.os }}
-    # Only run on schedule (nightly) or when explicitly requested
-    if: github.event_name == 'schedule' || contains(github.event.head_commit.message, '[test-slow]') || (github.event_name == 'pull_request' && contains(github.event.pull_request.body, '[test-slow]'))
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: ['3.11']  # Only test on primary version
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.11']
     steps:
       - uses: actions/checkout@v6
 
@@ -135,10 +133,17 @@ jobs:
           uv run python -c "import duckdb; con = duckdb.connect(); con.execute('INSTALL spatial'); con.execute('INSTALL httpfs'); con.execute('INSTALL h3 FROM community')"
 
       - name: Run slow and network tests (parallel)
+        shell: bash
         run: |
-          uv run pytest -n auto -m "slow or network" -v --tb=short --cov=geoparquet_io --cov-report=xml --cov-report=term-missing --cov-fail-under=0
+          if [ "$RUNNER_OS" == "Windows" ]; then
+            # Use loadfile distribution on Windows to reduce DuckDB extension conflicts
+            uv run pytest -n auto --dist=loadfile -m "slow or network" -v --tb=short --cov=geoparquet_io --cov-report=xml --cov-report=term-missing --cov-fail-under=0
+          else
+            uv run pytest -n auto -m "slow or network" -v --tb=short --cov=geoparquet_io --cov-report=xml --cov-report=term-missing --cov-fail-under=0
+          fi
 
       - name: Upload slow test coverage to Codecov
+        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
         uses: codecov/codecov-action@v5
         with:
           file: ./coverage.xml
