Streamline CLAUDE.md and add development workflow hooks
- Reduce CLAUDE.md from ~780 to ~150 lines by removing redundancy
- Consolidate duplicate testing sections and code examples
- Add optional git hooks for improved workflow:
  - pre-push: Run fast tests before pushing
  - commit-msg: Enforce imperative mood in commits
  - post-checkout: Auto-sync dependencies when pyproject.toml changes
- Add pre-commit reminder for Python API additions
- Focus on quick reference and actionable guidelines

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,3 +50,22 @@ repos:
       language: system
       pass_filenames: false
       types: [python]
+
+    - id: check-api-for-cli
+      name: check-api-for-cli
+      description: Remind to add Python API for new CLI commands
+      entry: bash
+      args:
+        - -c
+        - |
+          # This is a reminder hook - it doesn't fail, just warns
+          if git diff --cached --name-only | grep -q "geoparquet_io/cli/main.py"; then
+            echo "⚠️  Reminder: If you added new CLI commands, ensure you also:"
+            echo "   1. Added corresponding methods to api/table.py"
+            echo "   2. Added corresponding functions to api/ops.py"
+            echo "   3. Updated docs/api/python-api.md"
+            echo "   See CLAUDE.md Quick Checklist for details."
+          fi
+      language: system
+      pass_filenames: false
+      always_run: true
