--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,3 +50,89 @@ repos:
       language: system
       pass_filenames: false
       types: [python]
+
+    - id: check-api-for-cli
+      name: check-api-for-cli
+      description: Remind to add Python API for new CLI commands
+      entry: bash
+      args:
+        - -c
+        - |
+          # This is a reminder hook - it doesn't fail, just warns
+          if git diff --cached --name-only | grep -q "geoparquet_io/cli/main.py"; then
+            echo "⚠️  Reminder: If you added new CLI commands, ensure you also:"
+            echo "   1. Added corresponding methods to api/table.py"
+            echo "   2. Added corresponding functions to api/ops.py"
+            echo "   3. Updated docs/api/python-api.md"
+            echo "   See CLAUDE.md Quick Checklist for details."
+          fi
+      language: system
+      pass_filenames: false
+      always_run: true
+
+    - id: check-commit-msg
+      name: check-commit-msg
+      description: Enforce imperative mood in commit messages
+      entry: bash
+      args:
+        - -c
+        - |
+          # Works with worktrees - uses passed filename
+          commit_file="$1"
+          if [ -f "$commit_file" ]; then
+            first_line=$(head -n1 "$commit_file")
+            # Skip merge commits
+            if echo "$first_line" | grep -q "^Merge"; then
+              exit 0
+            fi
+            # Check if starts with capital letter (imperative mood)
+            first_char=$(echo "$first_line" | cut -c1)
+            if [[ "$first_char" =~ [a-z] ]]; then
+              echo "❌ Commit message should start with a capital letter (imperative mood)"
+              echo "   Bad:  'added new feature' or 'adding new feature'"
+              echo "   Good: 'Add new feature'"
+              echo "   See CLAUDE.md for commit message guidelines"
+              exit 1
+            fi
+          fi
+      language: system
+      pass_filenames: true
+      stages: [commit-msg]
+
+    - id: fast-tests
+      name: fast-tests
+      description: Run fast tests (optional - enable with ENABLE_PRE_PUSH_TESTS=1)
+      entry: bash
+      args:
+        - -c
+        - |
+          # Only run if explicitly enabled via environment variable
+          if [ "$ENABLE_PRE_PUSH_TESTS" = "1" ]; then
+            echo "Running fast tests..."
+            uv run pytest -n auto -m "not slow and not network" --tb=short
+          else
+            # Silent pass - tests not enabled
+            exit 0
+          fi
+      language: system
+      pass_filenames: false
+      stages: [push]
+
+    - id: sync-dependencies
+      name: sync-dependencies
+      description: Auto-sync dependencies when pyproject.toml changes
+      entry: bash
+      args:
+        - -c
+        - |
+          # Check if pyproject.toml was changed
+          if git diff --cached --name-only | grep -q "^pyproject.toml$"; then
+            if command -v uv &> /dev/null; then
+              echo "📦 pyproject.toml changed, running uv sync..."
+              uv sync --all-extras
+              echo "✅ Dependencies synced"
+            fi
+          fi
+      language: system
+      pass_filenames: false
+      always_run: true
